# cookiecutter-ap-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.devenv.yml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/: FUNDING.yml
{{cookiecutter.project_slug}}/.github/workflows/: run_pytests.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
