[build-system]
[build-system]
requires = [
  "setuptools >= 64",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "{{cookiecutter.project_slug}}/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = [
  "-v",
  # (only needed by windows) disable faulthandler plugin to suppress non-fatal error msgs
  "-p", "no:faulthandler",
]

[tool.coverage.run]
source = ["{{cookiecutter.project_slug}}"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
]

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | venv.*
    | build
    | dist
    | ci
  )/
)
'''

[tool.isort]
profile = "black"
py_version = "37"
force_single_line = true
add_imports = ["from __future__ import annotations"]
extend_skip = ["docs/source/conf.py"]
