[metadata]
name = {{cookiecutter.project_slug}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
download_url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
license = {{cookiecutter.open_source_license}}
license_file = LICENSE
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    importlib_resources; python_version < '3.7'
    typing_extensions; python_version < '3.8'

[options.packages.find]
exclude =
    *.tests

[options.package_data]
{{cookiecutter.project_slug}} =
    py.typed

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}.__main__:main

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True
